--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -54,6 +54,7 @@ ul {
 .is-size-2 {
   font-size: 4.5rem !important;
   text-transform: uppercase;
+  line-height: 1.2;
 }
 .is-size-2,
 .is-size-3 {
