--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -38,20 +38,19 @@
 
 <script type="application/ld+json"> {
     "@context" : "http://schema.org",
-    "@type" : "{{ $.Site.Params.schema.type }}",
-    "telephone":"{{ $.Site.Params.schema.phone }}",
-    "image": "{{ $.Site.BaseURL }}{{ $.Site.Params.schema.og }}",
-    "address" : {
-        "@type": "PostalAddress",
-        "addressLocality": "{{ $.Site.Params.schema.city }}",
-        "addressRegion": "{{ $.Site.Params.schema.region }}",
-        "postalCode": "{{ $.Site.Params.schema.postalcode }}",
-        "streetAddress": "{{ $.Site.Params.schema.address }}, {{ $.Site.Params.schema.address2 }}" 
-    },
-    "priceRange": "{{ $.Site.Params.schema.priceRange }}",
-    "name":"{{.Site.Title}}",
-    "url":"{{.Site.BaseURL}}",
+    "@type" : "Restaurant",
+    "name":"West Coast Salty Buns",
+    "url":"https://www.westcoastsaltybuns.com/",
+    "email":"westcoastsaltybuns@gmail.com",
     "openingHours": [
-    "{{ $.Site.Params.schema.openinghour }}"]
-}
+    "Tu-Sa 12:00-19:00"],
+    "aggregateRating":{
+    "@type":"AggregateRating",
+    "ratingValue":"5",
+    "reviewCount":"15"},
+    "priceRange":"2",
+    "servesCuisine": ["Mexican BBQ"],"acceptsReservations":"false",
+    "menu":"https://www.westcoastsaltybuns.com/#menu",
+    "paymentAccepted":"Visa, Master Card, Discover, Amex"
+    } 
 </script>
