--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -17,7 +17,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="{{ .Title}} ~ {{ .Site.Title }}">
 <meta property="og:description" content="{{ .Params.description }}">
-<meta property="og:image" content="https://www.westcoastsaltybuns.ca/img/og.jpg">
+<meta property="og:image" content="https://ik.imagekit.io/supersonicsites/Westcoast_Salty_Buns/tr:ar-16-9,w-1600,/saltybuns-19_jXuCrehKD.JPG">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -25,7 +25,7 @@
 <meta property="twitter:url" content="{{ .Permalink }}">
 <meta name="twitter:title" content="{{ .Title}} ~ {{ .Site.Title }}">
 <meta name="twitter:description" content="{{ .Params.description }}">
-<meta name="twitter:image" content="https://www.brightestdays.ca/img/og.jpg">
+<meta name="twitter:image" content="https://ik.imagekit.io/supersonicsites/Westcoast_Salty_Buns/tr:ar-16-9,w-1600,/saltybuns-19_jXuCrehKD.JPG">
 
 <!-- Favicon Setup -->
 <link rel="apple-touch-icon" sizes="180x180" href="{{ $.Site.BaseURL }}apple-touch-icon.png">
