--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -46,6 +46,7 @@
     <div class="column is-3">
       <h3 class="is-size-4 has-text-uppercase mb-2">Contact</h3>
 
+        {{ .Site.Params.schema.phone }}
       <address class="">
 
         <small>{{ .Site.Params.schema.address }},</small>
